[gd_scene load_steps=10 format=3 uid="uid://dtfq1mtn3k3n3"]

[ext_resource type="Script" path="res://Scripts/Obstacles/tutorial_info.gd" id="1_hxvo4"]
[ext_resource type="Texture2D" uid="uid://gss0e82u42iw" path="res://Assets/Obstacles/tutorial_water/tutorialwater-1.png" id="2_adufm"]
[ext_resource type="Texture2D" uid="uid://wpyf0d4nbot5" path="res://Assets/Obstacles/tutorial_water/tutorialwater-2.png" id="3_irbgp"]
[ext_resource type="Texture2D" uid="uid://cmx7qovhhkyd4" path="res://Assets/Obstacles/tutorial_water/tutorialwater-3.png" id="4_w15wk"]
[ext_resource type="Texture2D" uid="uid://cxsrkvgsl6p8f" path="res://Assets/Obstacles/tutorial_water/tutorialwater-4.png" id="5_hj1c1"]
[ext_resource type="Texture2D" uid="uid://dca4ycvca5ipv" path="res://Assets/Obstacles/tutorial_water/tutorialwater-5.png" id="6_b00ib"]
[ext_resource type="FontFile" uid="uid://bg1oq07gebwu4" path="res://Assets/UI/Fonts/pixeloid-font/PixeloidSansBold-PKnYd.ttf" id="7_sn3c6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_c8tq5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_adufm")
}, {
"duration": 1.0,
"texture": ExtResource("3_irbgp")
}, {
"duration": 1.0,
"texture": ExtResource("4_w15wk")
}, {
"duration": 1.0,
"texture": ExtResource("5_hj1c1")
}, {
"duration": 1.0,
"texture": ExtResource("6_b00ib")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_q6gcv"]
font = ExtResource("7_sn3c6")
font_size = 45

[node name="Rock" type="Node2D"]
script = ExtResource("1_hxvo4")
action = "dash_left"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-93, 64)
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Area2D"]
texture_filter = 1
position = Vector2(-6, 20)
scale = Vector2(7, 7)
sprite_frames = SubResource("SpriteFrames_c8tq5")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.587191

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
scale = Vector2(0.753755, 0.778515)
polygon = PackedVector2Array(-21.2271, 132.303, 205.637, -16.6985, -1.32669, -83.4923, -222.884, 53.9489)

[node name="Text" type="Label" parent="."]
z_index = 5
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -225.0
offset_right = 3.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
text = "DASH LEFT here"
label_settings = SubResource("LabelSettings_q6gcv")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
